test/files/neg/primitive-sigs-1.check
B.scala:3: error: type mismatch;
 found   : Bippy
 required: AC[Integer]
    J.f(new Bippy())
        ^
one error found
